# bench-math-eval

./: Cargo.toml  README.md
benches/: arithmetic.rs  bench_main.rs  compiled.rs  variables.rs
result/reports/: index.html
result/reports/arithmetic/: index.html
result/reports/arithmetic/0/: index.html
result/reports/arithmetic/1/: index.html
result/reports/arithmetic/evalexpr/: index.html
result/reports/arithmetic/exmex/: index.html
result/reports/arithmetic/fasteval/: index.html
result/reports/arithmetic/kalk/: index.html
result/reports/arithmetic/mathew/: index.html
result/reports/arithmetic/meval/: index.html
result/reports/arithmetic/mexprp/: index.html
result/reports/arithmetic/rsc/: index.html
result/reports/arithmetic/shunting/: index.html
result/reports/arithmetic/thin_shunting/: index.html
result/reports/compiled/: index.html
result/reports/compiled/0/: index.html
result/reports/compiled/1/: index.html
result/reports/compiled/2/: index.html
result/reports/compiled/evalexpr/: index.html
result/reports/compiled/fasteval/: index.html
result/reports/compiled/meval/: index.html
result/reports/compiled/mexprp/: index.html
result/reports/compiled/shunting/: index.html
result/reports/compiled/thin_shunting/: index.html
result/reports/variables/: index.html
result/reports/variables/0/: index.html
result/reports/variables/1/: index.html
result/reports/variables/2/: index.html
result/reports/variables/evalexpr/: index.html
result/reports/variables/fasteval/: index.html
result/reports/variables/mathew/: index.html
(+199 files in other folders)
